<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".ui.map.MapFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/mapSettingsContainer"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/backButton"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <HorizontalScrollView
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_toLeftOf="@+id/backButton"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="18dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        style="@style/mapSettingBtnStyle"
                        android:id="@+id/normalBtn"
                        android:text="@string/map_type_normal"
                        />
                    <Button
                        style="@style/mapSettingBtnStyle"
                        android:id="@+id/satelliteBtn"
                        android:text="@string/map_type_satellite"
                        />
                    <Button
                        style="@style/mapSettingBtnStyle"
                        android:id="@+id/terrainBtn"
                        android:text="@string/map_type_terrain"
                        />
                    <Button
                        style="@style/mapSettingBtnStyle"
                        android:id="@+id/hybridBtn"
                        android:text="@string/map_type_hybrid"
                        />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>





        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_below="@+id/mapSettingsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

</FrameLayout>